--- a/.github/workflows/infra-drift-detection.yml
+++ b/.github/workflows/infra-drift-detection.yml
@@ -50,7 +50,7 @@ jobs:
       id: tf-plan
       run: |
         export exitcode=0
-        terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+        terraform plan -detailed-exitcode -no-color -out tfplan -lock-timeout=10m || export exitcode=$?
         
         echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
         
