Fix working directory paths in workflows

--- a/.github/workflows/infra-drift-detection.yml
+++ b/.github/workflows/infra-drift-detection.yml
@@ -43,6 +43,7 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
+      working-directory: ./infra/tf-app
 
     # Generates an execution plan for Terraform
     # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
@@ -60,13 +61,14 @@ jobs:
         else 
           exit 0
         fi
+      working-directory: ./infra/tf-app
         
     # Save plan to artifacts  
     - name: Publish Terraform Plan
       uses: actions/upload-artifact@v4
       with:
         name: tfplan
-        path: tfplan
+        path: ./infra/tf-app/tfplan
         
     # Create string output of Terraform Plan
     - name: Create String Output
@@ -84,6 +86,7 @@ jobs:
         echo '```' >> $GITHUB_OUTPUT
         echo "</details>" >> $GITHUB_OUTPUT
         echo "${delimiter}" >> $GITHUB_OUTPUT
+      working-directory: ./infra/tf-app
         
     # Publish Terraform Plan as task summary
     - name: Publish Terraform Plan to Task Summary
